# SortVisualisation

./: CMakeLists.txt  bubbleSort.h  insertionSort.h  main.cpp  quickSort.h  test.cpp
